add Latest News and card slider

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
+    "react-card-slider-component": "^1.0.9",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
